fix height for pdf

--- a/index.html
+++ b/index.html
@@ -1,11 +1,3 @@
-<!-- Имя желаемая должность краткое описание достижения(желательно с цифрами)
-контакты
-описание опыта работы образование сертификаты прочий опыт фио фото
-цель(название вакансии) 
-навыки(то что получается не больше 10 ) 
-образование
-опыт(я сделал а не делал) 
-контакты название файла с фамилией файл pdf -->
 <!DOCTYPE html>
 <html lang="ru">
     <head>
@@ -76,7 +68,7 @@
                                 slawaslawaslawa
                             </a>
                         </li>
-                        <li class="contacts__item">
+                        <li class="contacts__item contacts__item--qr">
                             <a
                                 href="https://slawaslawa.github.io/slawa-portfolio/"
                                 class="contacts__link"
@@ -87,7 +79,6 @@
                                     alt="QR-code"
                                     class="contacts__img"
                                 />
-                                <br />
                                 https://slawaslawa.github.io/slawa-portfolio/</a
                             >
                         </li>
